--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,7 +148,7 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
-    
+    implementation project(':react-native-android-location-enabler')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
